@@ -1,5 +1,12 @@
 2020-10-28  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
+	Fix PNG dump from 32-bit display.
+
+	* src/ftcommon.c (FTDemo_Display_Print): The 32-bit mode needs
+	transformations to account for endianness and skip the top byte.
+
+2020-10-28  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
 	* graph/win32/grwin32.c (gr_win32_surface_init): Default to BITSPIXEL.
 
 2020-10-27  Alexei Podtelezhnikov  <apodtele@gmail.com>
